Updated Project Design

--- a/themes/hugo-apero/layouts/about/list.html
+++ b/themes/hugo-apero/layouts/about/list.html
@@ -79,9 +79,9 @@
                 </p>
             </div>
             {{ end }}
-
+          <hr style="margin:2% 10%; border-width:0.5px; border-color:rgba(0,0,0,.1);">  
           <div class="pa1 pa2-ns tc ph4">
-            <h5 class="f-subheadline f4 fw2 ttu tracked">{{ .Params.link_list_label }}</h5>
+            <h5 class="f-subheadline f4 fw2 ttu tracked" style="margin-bottom:0%; margin-top:0%; ">{{ .Params.link_list_label }}</h5>
             <ul class="list measure center ph4 pb4">
               {{ partial "shared/about-links" . }}
             </ul>
